size square text alignment fixed

--- a/app/assets/stylesheets/shirt-size-checkboxes.css.sass
+++ b/app/assets/stylesheets/shirt-size-checkboxes.css.sass
@@ -2,22 +2,27 @@
 @import "fontface"
 
 .color-options
+	height: 62px
 	.sizes
 		margin-top: 10px
 		.size
 			background: white
-			padding: 10px
+			//padding: 10px
 			border: 1px solid $darkGray
-			width: 10px
-			height: 10px
+			width: 34px
+			height: 32px
 			cursor: pointer
-			line-height: 12px
-			display: inline-block
+			//line-height: 12px
+			//display: inline-block
 			margin-right: 10px
 			&:hover
 				background: $lighterGray
 			a
 				color: $darkGray
+				line-height: 32px
+				width: 34px
+				float: left
+				text-align: center
 
 		.out-of-stock
 			font-size: 9px
@@ -27,13 +32,15 @@
 			/* padding-top: 2px; */
 			/* padding-right: 19px; */
 			/* padding-bottom: 18px; */
-			height: 30px
-			width: 30px
+			//height: 30px
+			//width: 30px
 			padding: 0px
 			padding-top: 0px
 
 			p
-				margin-bottom: 0px
+				line-height: 10px
+				font-size: 10px
+				margin-top: 1px
 
 		.active-size
 			background: $darkGray
